# aegix-gltf

./: .gitignore  CMakeLists.txt  README.md  gltf.cpp  gltf.h  gltf_print.h  gltf_utils.h
test/: CMakeLists.txt  cube.gltf  main.cpp
